--- a/index.html
+++ b/index.html
@@ -44,14 +44,11 @@
 
   <!-- Performance hints -->
   <link rel="preload" as="image"
-        href="/assets/images/hero/home-hero-1600x840.webp"
-        imagesrcset="/assets/images/hero/home-hero-1600x840.webp 1600w, /assets/images/hero/home-hero-2400x1260.webp 2400w"
+        href="https://kitchengearlab.github.io/assets/images/hero/home-hero-1600x840.webp"
+        imagesrcset="https://kitchengearlab.github.io/assets/images/hero/home-hero-1600x840.webp 1600w, https://kitchengearlab.github.io/assets/images/hero/home-hero-2400x1260.webp 2400w"
         imagesizes="100vw" />
 
-  <link rel="preload" as="image" href="/assets/images/brand/kitchengearlab-logo-512.png" />
-
-  <!-- Optional: preconnect (safe, low-risk) -->
-  <link rel="preconnect" href="https://kitchengearlab.github.io" crossorigin />
+  <link rel="preload" as="image" href="https://kitchengearlab.github.io/assets/images/brand/kitchengearlab-logo-512.png" />
 
   <!-- Structured Data (JSON-LD) -->
   <script type="application/ld+json">
@@ -83,12 +80,7 @@
         "@type": "BreadcrumbList",
         "@id": "https://kitchengearlab.github.io/#breadcrumbs",
         "itemListElement": [
-          {
-            "@type": "ListItem",
-            "position": 1,
-            "name": "Home",
-            "item": "https://kitchengearlab.github.io/"
-          }
+          { "@type": "ListItem", "position": 1, "name": "Home", "item": "https://kitchengearlab.github.io/" }
         ]
       },
       {
@@ -148,69 +140,73 @@
 </head>
 
 <body>
-  <a class="skip-link" href="#main">Skip to content</a>
+  <a class="skip" href="#main">Skip to content</a>
 
   <header class="site-header" role="banner">
     <div class="container">
       <div class="header-inner">
         <a class="brand" href="/" aria-label="KitchenGearLab home">
-          <img
-            src="/assets/images/brand/kitchengearlab-logo-512.png"
-            width="48"
-            height="48"
-            alt="KitchenGearLab logo"
-            decoding="async"
-            loading="eager"
-            fetchpriority="high"
-          />
-          <span class="brand-text">
-            <span class="brand-name">KitchenGearLab</span>
-            <span class="brand-tagline">Neutral reviews. Practical decisions.</span>
+          <span class="logo" aria-hidden="true">
+            <img
+              src="https://kitchengearlab.github.io/assets/images/brand/kitchengearlab-logo-512.png"
+              width="32" height="32"
+              alt=""
+              decoding="async"
+              loading="eager"
+              fetchpriority="high"
+            />
+          </span>
+          <span>
+            <span class="name">KitchenGearLab</span>
+            <span class="tagline">Neutral reviews. Practical decisions.</span>
           </span>
         </a>
 
-        <nav class="site-nav" aria-label="Primary">
-          <ul class="nav-list">
-            <li><a href="/guides/">Guides</a></li>
-            <li><a href="/reviews/">Reviews</a></li>
-            <li><a href="/how-we-test/">How we test</a></li>
-            <li><a href="/disclosures/">Disclosures</a></li>
-          </ul>
+        <nav class="nav" aria-label="Primary">
+          <a href="/guides/">Guides</a>
+          <a href="/reviews/">Reviews</a>
+          <a href="/how-we-test/">How we test</a>
+          <a href="/disclosures/">Disclosures</a>
         </nav>
       </div>
     </div>
   </header>
 
-  <main id="main" class="site-main" role="main" tabindex="-1">
+  <main id="main" role="main" tabindex="-1">
+
     <section class="hero" aria-labelledby="hero-title">
       <div class="container">
-        <div class="hero-grid">
-          <div class="hero-copy">
+        <div class="hero-inner">
+
+          <div class="hero-card">
             <h1 id="hero-title">Practical Kitchen Gear Reviews &amp; Buying Guides</h1>
-            <p class="lede">
+
+            <p class="lead">
               KitchenGearLab publishes test-driven, brand-neutral guidance to help you compare tools you’ll actually use.
               When something depends on the specific version, we’ll say it: <strong>varies by model</strong>.
             </p>
 
-            <div class="hero-actions" role="group" aria-label="Primary actions">
-              <a class="btn btn-primary" href="/guides/">Browse buying guides</a>
+            <div class="actions" role="group" aria-label="Primary actions">
+              <a class="btn btn-accent" href="/guides/">Browse buying guides</a>
               <a class="btn btn-secondary" href="/how-we-test/">How we test / evaluate</a>
             </div>
 
-            <p class="micro-note">
+            <p class="small" style="margin-top: var(--s-4);">
               <a href="/disclosures/">Affiliate disclosure</a> applies. Content is informational only.
             </p>
+
+            <p class="last-updated">Last updated: 2026-02-01</p>
           </div>
 
-          <div class="hero-media">
+          <aside class="hero-aside" aria-label="Hero image">
             <picture>
               <source
                 type="image/webp"
-                srcset="/assets/images/hero/home-hero-1600x840.webp 1600w, /assets/images/hero/home-hero-2400x1260.webp 2400w"
-                sizes="(max-width: 900px) 100vw, 50vw"
+                srcset="https://kitchengearlab.github.io/assets/images/hero/home-hero-1600x840.webp 1600w, https://kitchengearlab.github.io/assets/images/hero/home-hero-2400x1260.webp 2400w"
+                sizes="(max-width: 900px) 100vw, 40vw"
               />
               <img
-                src="/assets/images/hero/home-hero-1600x840.webp"
+                src="https://kitchengearlab.github.io/assets/images/hero/home-hero-1600x840.webp"
                 width="2400"
                 height="1260"
                 alt="A clean countertop with neutral-toned cookware shapes and soft daylight."
@@ -219,23 +215,22 @@
                 fetchpriority="high"
               />
             </picture>
-          </div>
+          </aside>
+
         </div>
       </div>
     </section>
 
     <nav class="breadcrumbs" aria-label="Breadcrumb">
       <div class="container">
-        <ol class="breadcrumbs-list">
-          <li><a href="/" aria-current="page">Home</a></li>
-        </ol>
+        <span><a href="/" aria-current="page">Home</a></span>
       </div>
     </nav>
 
     <section class="section" aria-labelledby="intro-title">
       <div class="container">
         <h2 id="intro-title">What KitchenGearLab is</h2>
-        <div class="prose">
+        <div class="stack">
           <p>
             We review kitchen gear with a simple goal: help you make fewer guesses. That means focusing on
             repeatable checks, clear trade-offs, and practical constraints like cleaning, storage, and day-to-day comfort.
@@ -250,91 +245,59 @@
 
     <section class="section" aria-labelledby="featured-title">
       <div class="container">
-        <div class="section-head">
-          <h2 id="featured-title">Featured guides</h2>
-          <p class="section-subtitle">Starting points for common purchases, written to be updated as models change.</p>
-        </div>
+        <h2 id="featured-title">Featured guides</h2>
+        <p class="muted">Starting points for common purchases, written to be updated as models change.</p>
 
-        <div class="cards" role="list">
+        <div class="grid cols-2" role="list" style="margin-top: var(--s-6);">
           <article class="card" role="listitem">
             <h3 class="card-title"><a href="/guides/air-fryers/">Air fryers</a></h3>
-            <p class="card-text">
+            <p class="muted">
               What to compare beyond capacity: control clarity, cleaning practicality, and performance consistency (varies by model).
             </p>
-            <p class="card-meta"><a class="card-link" href="/guides/air-fryers/" aria-label="Read the air fryers guide">Read guide</a></p>
+            <div class="actions" style="margin-top: var(--s-4);">
+              <a class="btn btn-secondary" href="/guides/air-fryers/">Read guide</a>
+            </div>
           </article>
 
           <article class="card" role="listitem">
             <h3 class="card-title"><a href="/guides/chef-knives/">Chef knives</a></h3>
-            <p class="card-text">
+            <p class="muted">
               Comfort and edge behavior matter more than labels. We outline what to test in your own kitchen.
             </p>
-            <p class="card-meta"><a class="card-link" href="/guides/chef-knives/" aria-label="Read the chef knives guide">Read guide</a></p>
+            <div class="actions" style="margin-top: var(--s-4);">
+              <a class="btn btn-secondary" href="/guides/chef-knives/">Read guide</a>
+            </div>
           </article>
 
           <article class="card" role="listitem">
             <h3 class="card-title"><a href="/guides/cutting-boards/">Cutting boards</a></h3>
-            <p class="card-text">
+            <p class="muted">
               How material affects maintenance and knife feel, plus what “easy to clean” really looks like.
             </p>
-            <p class="card-meta"><a class="card-link" href="/guides/cutting-boards/" aria-label="Read the cutting boards guide">Read guide</a></p>
+            <div class="actions" style="margin-top: var(--s-4);">
+              <a class="btn btn-secondary" href="/guides/cutting-boards/">Read guide</a>
+            </div>
           </article>
 
           <article class="card" role="listitem">
             <h3 class="card-title"><a href="/guides/nonstick-pans/">Nonstick pans</a></h3>
-            <p class="card-text">
+            <p class="muted">
               A practical framework for lifespan and heat limits without relying on marketing claims.
             </p>
-            <p class="card-meta"><a class="card-link" href="/guides/nonstick-pans/" aria-label="Read the nonstick pans guide">Read guide</a></p>
-          </article>
-        </div>
-      </div>
-    </section>
-
-    <section class="section highlight" aria-labelledby="airfryers-title">
-      <div class="container">
-        <div class="highlight-inner">
-          <div class="highlight-copy">
-            <h2 id="airfryers-title">Best Air Fryers highlight</h2>
-            <p>
-              Air fryers change quickly, and features don’t always translate to better cooking.
-              Our guide focuses on what’s observable: heat consistency, ease of cleaning, and day-to-day controls.
-            </p>
-            <ul class="checklist">
-              <li>We separate “nice to have” from “changes results.”</li>
-              <li>We note trade-offs, not just winners.</li>
-              <li>When specifics differ across versions, we say “varies by model.”</li>
-            </ul>
-            <p>
-              <a class="btn btn-primary" href="/guides/air-fryers/">Go to the Air Fryers Guide</a>
-            </p>
-          </div>
-
-          <div class="highlight-aside" aria-label="Quick links">
-            <div class="aside-card">
-              <h3 class="aside-title">Quick links</h3>
-              <ul class="aside-list">
-                <li><a href="/reviews/">Latest reviews</a></li>
-                <li><a href="/how-we-test/">How we test / evaluate</a></li>
-                <li><a href="/disclosures/">Affiliate disclosure</a></li>
-              </ul>
-              <p class="aside-note">
-                Informational-only: we share evaluation notes, not professional advice.
-              </p>
+            <div class="actions" style="margin-top: var(--s-4);">
+              <a class="btn btn-secondary" href="/guides/nonstick-pans/">Read guide</a>
             </div>
-          </div>
+          </article>
         </div>
       </div>
     </section>
 
     <section class="section" aria-labelledby="method-title">
       <div class="container">
-        <div class="section-head">
-          <h2 id="method-title">Trust &amp; methodology</h2>
-          <p class="section-subtitle">How we test / evaluate (and how to use our work)</p>
-        </div>
+        <h2 id="method-title">Trust &amp; methodology</h2>
+        <p class="muted">How we test / evaluate (and how to use our work)</p>
 
-        <div class="prose">
+        <div class="stack" style="margin-top: var(--s-6);">
           <p>
             KitchenGearLab is built around clear criteria and repeatable checks. We aim to describe what we did and what we observed,
             so you can decide whether a recommendation fits your cooking style, budget, and space.
@@ -344,7 +307,7 @@
           <ul>
             <li><strong>Usability:</strong> controls, ergonomics, readability, and day-to-day friction.</li>
             <li><strong>Performance:</strong> consistent results under typical home conditions (varies by model).</li>
-            <li><strong>Cleanup &amp; maintenance:</strong> parts that trap residue, dishwasher practicality, and surface durability cues.</li>
+            <li><strong>Cleanup &amp; maintenance:</strong> residue traps, dishwasher practicality, and surface durability cues.</li>
             <li><strong>Build &amp; longevity signals:</strong> common failure points and realistic care requirements.</li>
             <li><strong>Transparency:</strong> we avoid repeating claims we can’t verify.</li>
           </ul>
@@ -352,42 +315,19 @@
           <h3>What we avoid</h3>
           <ul>
             <li>Overpromising outcomes or assuming one tool fits everyone.</li>
-            <li>Inventing specs, performance numbers, or lab-style measurements without verifiable data.</li>
+            <li>Inventing specs or performance numbers without verifiable data.</li>
             <li>Presenting marketing language as evidence.</li>
           </ul>
 
-          <p>
-            Want the details? Visit <a href="/how-we-test/">How we test / evaluate</a> for the full methodology and update process.
-          </p>
-        </div>
-      </div>
-    </section>
-
-    <section class="section" aria-labelledby="links-title">
-      <div class="container">
-        <h2 id="links-title">More guides &amp; important links</h2>
-
-        <div class="two-col">
-          <div class="col">
-            <h3>Browse by intent</h3>
-            <ul class="link-list">
-              <li><a href="/guides/">All buying guides</a></li>
-              <li><a href="/reviews/">All reviews</a></li>
-              <li><a href="/guides/kitchen-essentials/">Kitchen essentials</a></li>
-              <li><a href="/guides/small-appliances/">Small appliances</a></li>
-            </ul>
+          <div class="note">
+            <p class="small">
+              Want the details? Visit <a href="/how-we-test/">How we test / evaluate</a> for the full methodology and update process.
+            </p>
           </div>
 
-          <div class="col">
-            <h3>Disclosure &amp; disclaimer</h3>
-            <ul class="link-list">
-              <li><a href="/disclosures/">Affiliate disclosure</a></li>
-              <li><a href="/editorial-policy/">Editorial policy</a></li>
-              <li><a href="/contact/">Contact</a></li>
-            </ul>
+          <div class="note attention">
             <p class="small">
-              Informational-only disclaimer: KitchenGearLab provides general information for comparison and education.
-              We don’t provide professional advice, and product details can change over time (varies by model).
+              Informational-only disclaimer: Content is for general information and comparison. Product details can change and performance varies by model.
             </p>
           </div>
         </div>
@@ -401,7 +341,7 @@
         <div class="faq">
           <details>
             <summary>Do you accept free products for reviews?</summary>
-            <div class="prose">
+            <div class="answer">
               <p>
                 We may receive products for evaluation, but we aim to keep our conclusions independent.
                 If something can’t be verified through testing or documentation, we treat it cautiously and note uncertainty.
@@ -411,7 +351,7 @@
 
           <details>
             <summary>How do you choose what to recommend?</summary>
-            <div class="prose">
+            <div class="answer">
               <p>
                 We focus on what affects everyday use: clarity of controls, cleanup practicality, durability cues, and consistent results.
                 We call out trade-offs rather than implying a universal “best.”
@@ -421,7 +361,7 @@
 
           <details>
             <summary>Is your content professional advice?</summary>
-            <div class="prose">
+            <div class="answer">
               <p>
                 No. Content is informational only. We share evaluation notes so you can compare options and decide what fits your needs.
               </p>
@@ -430,50 +370,43 @@
         </div>
       </div>
     </section>
+
   </main>
 
   <footer class="site-footer" role="contentinfo">
     <div class="container">
       <div class="footer-grid">
-        <div class="footer-brand">
-          <img
-            src="/assets/images/brand/kitchengearlab-logo-512.png"
-            width="40"
-            height="40"
-            alt="KitchenGearLab logo"
-            loading="lazy"
-            decoding="async"
-          />
-          <p class="footer-name">KitchenGearLab</p>
-          <p class="footer-note">Neutral, test-driven kitchen gear reviews and buying guides.</p>
+
+        <div>
+          <p class="footer-title">KitchenGearLab</p>
+          <p class="muted">
+            Neutral, test-driven kitchen gear reviews and buying guides.
+          </p>
+          <p class="footer-fineprint">
+            Affiliate disclosure: Some links may be affiliate links. If you buy through them, we may earn a commission at no extra cost to you.
+            See <a href="/disclosures/">Disclosures</a>.
+          </p>
         </div>
 
-        <nav class="footer-nav" aria-label="Footer">
-          <ul class="footer-links">
-            <li><a href="/guides/">Guides</a></li>
-            <li><a href="/reviews/">Reviews</a></li>
-            <li><a href="/how-we-test/">How we test / evaluate</a></li>
-            <li><a href="/disclosures/">Affiliate disclosure</a></li>
-            <li><a href="/editorial-policy/">Editorial policy</a></li>
-            <li><a href="/contact/">Contact</a></li>
-          </ul>
+        <nav aria-label="Footer">
+          <div class="footer-title">Links</div>
+          <div class="footer-links">
+            <a href="/guides/">Guides</a>
+            <a href="/reviews/">Reviews</a>
+            <a href="/how-we-test/">How we test / evaluate</a>
+            <a href="/disclosures/">Affiliate disclosure</a>
+            <a href="/editorial-policy/">Editorial policy</a>
+            <a href="/contact/">Contact</a>
+          </div>
         </nav>
+
       </div>
 
-      <div class="footer-legal">
-        <p class="small">
-          Affiliate disclosure: Some links may be affiliate links. If you buy through them, we may earn a commission at no extra cost to you.
-          See <a href="/disclosures/">Disclosures</a>.
-        </p>
-        <p class="small">
-          Informational-only disclaimer: Content is for general information and comparison. Product details can change and performance varies by model.
-        </p>
-        <p class="small">
-          <span aria-hidden="true">©</span>
-          <span>KitchenGearLab</span>
-          <span class="sr-only">Copyright</span>
-        </p>
-      </div>
+      <p class="footer-fineprint">
+        <span aria-hidden="true">©</span>
+        <span>KitchenGearLab</span>
+        <span class="visually-hidden">Copyright</span>
+      </p>
     </div>
   </footer>
 </body>
