--- a/index.html
+++ b/index.html
@@ -47,7 +47,6 @@
         href="https://kitchengearlab.github.io/assets/images/hero/home-hero-1600x840.webp"
         imagesrcset="https://kitchengearlab.github.io/assets/images/hero/home-hero-1600x840.webp 1600w, https://kitchengearlab.github.io/assets/images/hero/home-hero-2400x1260.webp 2400w"
         imagesizes="100vw" />
-
   <link rel="preload" as="image" href="https://kitchengearlab.github.io/assets/images/brand/kitchengearlab-logo-512.png" />
 
   <!-- Structured Data (JSON-LD) -->
@@ -131,15 +130,10 @@
           </span>
         </a>
 
-        <!-- ✅ Only links that exist in your repo -->
+        <!-- ✅ Short professional menu -->
         <nav class="nav" aria-label="Primary">
-          <a href="/" aria-current="page">Home</a>
           <a href="/guides/">Guides</a>
           <a href="/best-air-fryers/">Best Air Fryers</a>
-          <a href="/ninja-air-fryers/">Ninja Hub</a>
-          <a href="/disclosure/">Disclosure</a>
-          <a href="/privacy/">Privacy</a>
-          <a href="/about/">About</a>
         </nav>
       </div>
     </div>
@@ -161,11 +155,11 @@
 
             <div class="actions" role="group" aria-label="Primary actions">
               <a class="btn btn-accent" href="/guides/">Browse buying guides</a>
-              <a class="btn btn-secondary" href="#method">Our methodology</a>
+              <a class="btn btn-secondary" href="#method">How we evaluate</a>
             </div>
 
             <p class="small" style="margin-top: var(--s-4);">
-              <a href="/disclosure/">Affiliate disclosure</a> applies. Content is informational only.
+              Trust-first: <a href="/about/">About</a> · <a href="/disclosure/">Disclosure</a> · <a href="/privacy/">Privacy</a>
             </p>
 
             <p class="last-updated">Last updated: 2026-02-01</p>
@@ -200,10 +194,10 @@
       </div>
     </nav>
 
-    <section class="section" aria-labelledby="featured-title">
+    <section class="section" aria-labelledby="start-title">
       <div class="container">
-        <h2 id="featured-title">Start here</h2>
-        <p class="muted">Fast paths to your most important pages (all real links, no 404s).</p>
+        <h2 id="start-title">Start here</h2>
+        <p class="muted">Clear paths to the pages visitors actually want.</p>
 
         <div class="grid cols-2" role="list" style="margin-top: var(--s-6);">
           <article class="card" role="listitem">
@@ -215,16 +209,8 @@
           </article>
 
           <article class="card" role="listitem">
-            <h3 class="card-title"><a href="/ninja-air-fryers/">Ninja Air Fryers Hub</a></h3>
-            <p class="muted">Brand hub: models, trade-offs, and related comparisons.</p>
-            <div class="actions" style="margin-top: var(--s-4);">
-              <a class="btn btn-secondary" href="/ninja-air-fryers/">Open hub</a>
-            </div>
-          </article>
-
-          <article class="card" role="listitem">
             <h3 class="card-title"><a href="/guides/what-is-an-air-fryer/">What is an air fryer?</a></h3>
-            <p class="muted">A clear explainer before you buy: how it works, what matters, what doesn’t.</p>
+            <p class="muted">A clear explainer before you buy: what matters, what doesn’t.</p>
             <div class="actions" style="margin-top: var(--s-4);">
               <a class="btn btn-secondary" href="/guides/what-is-an-air-fryer/">Read</a>
             </div>
@@ -237,6 +223,14 @@
               <a class="btn btn-secondary" href="/guides/how-to-choose-an-air-fryer/">Read</a>
             </div>
           </article>
+
+          <article class="card" role="listitem">
+            <h3 class="card-title"><a href="/guides/are-air-fryers-worth-it/">Are air fryers worth it?</a></h3>
+            <p class="muted">When it’s worth buying and when it’s not, explained without hype.</p>
+            <div class="actions" style="margin-top: var(--s-4);">
+              <a class="btn btn-secondary" href="/guides/are-air-fryers-worth-it/">Read</a>
+            </div>
+          </article>
         </div>
       </div>
     </section>
@@ -244,11 +238,11 @@
     <section class="section" id="method" aria-labelledby="method-title">
       <div class="container">
         <h2 id="method-title">Trust &amp; methodology</h2>
-        <p class="muted">How we evaluate products (without hype)</p>
+        <p class="muted">How we evaluate gear (and how to use our work)</p>
 
         <div class="stack" style="margin-top: var(--s-6);">
           <p>
-            KitchenGearLab is built around clear criteria and repeatable checks. We aim to describe what we did and what we observed,
+            KitchenGearLab is built around clear criteria and repeatable checks. We describe what we did and what we observed,
             so you can decide whether a recommendation fits your cooking style, budget, and space.
           </p>
 
@@ -256,10 +250,16 @@
           <ul>
             <li><strong>Usability:</strong> controls, ergonomics, readability, and day-to-day friction.</li>
             <li><strong>Performance:</strong> consistent results under typical home conditions (varies by model).</li>
-            <li><strong>Cleanup:</strong> residue traps, dishwasher practicality, and surfaces that clean easily.</li>
+            <li><strong>Cleanup:</strong> residue traps, dishwasher practicality, surfaces that clean easily.</li>
             <li><strong>Durability cues:</strong> build quality signals and common failure points.</li>
             <li><strong>Transparency:</strong> we avoid repeating claims we can’t verify.</li>
           </ul>
+
+          <div class="note">
+            <p class="small">
+              We keep disclosures clear and separate. See <a href="/disclosure/">Disclosure</a>.
+            </p>
+          </div>
 
           <div class="note attention">
             <p class="small">
@@ -270,39 +270,11 @@
       </div>
     </section>
 
-    <section class="section" id="faq" aria-labelledby="faq-title">
-      <div class="container">
-        <h2 id="faq-title">FAQ</h2>
-
-        <div class="faq">
-          <details>
-            <summary>Do you accept free products for reviews?</summary>
-            <div class="answer">
-              <p>
-                We may receive products for evaluation, but we aim to keep our conclusions independent.
-                If something can’t be verified through testing or documentation, we treat it cautiously and note uncertainty.
-              </p>
-            </div>
-          </details>
-
-          <details>
-            <summary>Is your content professional advice?</summary>
-            <div class="answer">
-              <p>
-                No. Content is informational only. We share evaluation notes so you can compare options and decide what fits your needs.
-              </p>
-            </div>
-          </details>
-        </div>
-      </div>
-    </section>
-
   </main>
 
   <footer class="site-footer" role="contentinfo">
     <div class="container">
       <div class="footer-grid">
-
         <div>
           <p class="footer-title">KitchenGearLab</p>
           <p class="muted">Neutral, test-driven kitchen gear reviews and buying guides.</p>
@@ -321,15 +293,11 @@
           <div class="footer-links">
             <a href="/guides/">Guides</a>
             <a href="/best-air-fryers/">Best Air Fryers</a>
-            <a href="/ninja-air-fryers/">Ninja Hub</a>
-            <a href="/ninja-vs-philips/">Ninja vs Philips</a>
-            <a href="/ninja-vs-cosori/">Ninja vs Cosori</a>
+            <a href="/about/">About</a>
             <a href="/disclosure/">Disclosure</a>
             <a href="/privacy/">Privacy</a>
-            <a href="/about/">About</a>
           </div>
         </nav>
-
       </div>
 
       <p class="footer-fineprint">
